--- a/libraries/frameworks/io2012/layouts/twocol.html
+++ b/libraries/frameworks/io2012/layouts/twocol.html
@@ -1,11 +1,10 @@
 ---
 layout: slide
-replace: slide.content
 ---
-{{{ slide.content }}}  
-<div class='left' style='float:left;width:{{{ slide.w1 }}}'>
- {{{ slide.left.html }}}
-</div>    
-<div class='right' style='float:right;width:{{{ slide.w2 }}}'>
- {{{ slide.right.html }}}
+{{{ slide.content }}}
+<div style='float:left;width:48%;' class='centered'>
+  {{{ slide.left.html }}}
+</div>
+<div style='float:right;width:48%;'>
+  {{{ slide.right.html }}}
 </div>
