--- a/libraries/frameworks/io2012/layouts/twocol_dynamic.html
+++ b/libraries/frameworks/io2012/layouts/twocol_dynamic.html
@@ -1,11 +1,10 @@
 ---
 layout: slide
-replace: slide.content
 ---
 {{{ slide.content }}}  
-<div class='left' style='float:left;width:{{{ slide.w1 }}}'>
+<div style='float:left;width:{{{ slide.w1 }}}'>
  {{{ slide.left.html }}}
 </div>    
-<div class='right' style='float:right;width:{{{ slide.w2 }}}'>
+<div style='float:right;width:{{{ slide.w2 }}}'>
  {{{ slide.right.html }}}
 </div>
