--- a/libraries/frameworks/io2012/layouts/twocol_dynamic.html
+++ b/libraries/frameworks/io2012/layouts/twocol_dynamic.html
@@ -1,8 +1,9 @@
 ---
 layout: slide
+replace: slide.content
 ---
 {{{ slide.content }}}  
-<div style='float:left;width:{{{ slide.w1 }}}'>
+<div style='float:left;width:{{{ slide.w1 }}}' class='centered'>
  {{{ slide.left.html }}}
 </div>    
 <div style='float:right;width:{{{ slide.w2 }}}'>
