--- a/libraries/frameworks/io2012/layouts/twocol_dynamic.html
+++ b/libraries/frameworks/io2012/layouts/twocol_dynamic.html
@@ -2,7 +2,7 @@
 layout: slide
 ---
 {{{ slide.content }}}  
-<div style='float:left;width:{{{ slide.w1 }}}' class='centered'>
+<div style='float:left;width:{{{ slide.w1 }}}' >
  {{{ slide.left.html }}}
 </div>    
 <div style='float:right;width:{{{ slide.w2 }}}'>
