--- a/libraries/frameworks/io2012/layouts/twocol_dynamic.html
+++ b/libraries/frameworks/io2012/layouts/twocol_dynamic.html
@@ -10,8 +10,8 @@ layout: slide
 </div>
  {{# slide.pnotes }}
   <aside class="note" id="{{ id }}">
-    <section >
+    <section style='width:{{{ slide.w }}}'>
       {{{ html }}}
-    </section style='width:{{{ slide.w }}}'>
+    </section >
   </aside>
   {{/ slide.pnotes }}
